--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,8 @@
-<h3>From app component</h3>
-<app-post-create></app-post-create>
+<app-header></app-header>
+<main>
+<app-post-create (postCreated)="onPostAdded($event)">
+
+</app-post-create>
+<app-post-list [posts]="storedPosts"></app-post-list>
+</main>
+
